--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -39,5 +39,5 @@ jobs:
     - name: Projeto compilado
       uses: actions/upload-artifact@v4
       with:
-        name: upload-artifact
+        name: projeto_compilado
         path: main
